# poetry-run

./: .gitignore  README.md  main.py  pyproject.toml  runner.py
runner_plugin/: command.py  setup.py
runner_plugin/runner_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
