[project]
name = "ice-cream"
version = "0.1.0"
description = ""
authors = [
    {name = "tejas-athalye-coditas",email = "tejas.athalye@coditas.com"}

]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "poethepoet (>=0.37.0,<0.38.0)"
]

[project.scripts]
hello = "main:greet"

[tool.poetry.scripts]
noice = "main:main"

[tool.poe.tasks]
dev = "python main.py"

[tool.poetry]
packages = [{include = "ice_cream", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
