[project]
name = "ice-cream"
version = "0.1.0"
description = ""
authors = [
    {name = "tejas-athalye-coditas",email = "tejas.athalye@coditas.com"}

]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "poethepoet (>=0.37.0,<0.38.0)"
]

[tool.poetry.plugins."poetry.command"]
pluginrun = "runner_plugin.command:RunnerCommand"

[project.scripts]
hello = "main:greet"
runit = "runner:run"

[tool.poetry.scripts]
noice = "main:main"
runner = "runner:run"
dev = "main:__main__"

[tool.poe.tasks]
dev = "python main.py"


[tool.poetry]
packages = [{include = "ice_cream", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
